# T_logo_detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
annotation/: prepare_dataset_from_pseudo.py  run_annotate.sh
annotator/tbank_annotate/: cli.py  detector.py  postprocess.py  prompts.py  utils.py
app/: infer.py  main.py
eval/: eval_f1.py  eval_from_url.py  f1_conf_sweep.csv
training/: train_small.py
training/configs/: data.yaml
